# hybridz

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.en.md  README.md  alice29.hz  analyze_sao.py  benchmark.txt  kennedy.hz  ptt5.hz
corpus/: output.hz  output2.hz
hybridz-gui/.cargo/: config.toml
hybridz-gui/src-tauri/: Cargo.toml  tauri.conf.json
hybridz-gui/src-tauri/capabilities/: default.json
hybridz-gui/src-tauri/src/: lib.rs
src/: analyzer.rs  codec.rs  lib.rs  main.rs  parallel.rs  stream.rs
src/entropy/: ans.rs  freq_table.rs  huffman.rs  mod.rs
src/lz/: engine.rs  hash_chain.rs  mod.rs  token.rs
src/transforms/: bcj.rs  bwt.rs  deinterleave.rs  delta.rs  mod.rs  mtf.rs  rle.rs
